--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,13 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.86"
+
+[dependencies.web-sys]
+web-sys = "0.3.63"
+features = [
+'Document',
+'Element',
+'HtmlElement',
+'Node',
+'Window'
+]
